--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
       <div class="swiper-wrapper">
 
-         <section class="swiper-slide slide" style="background: url(images/home-slide-1.jpg) no-repeat;">
+         <section class="swiper-slide slide" style="background: url(images/home-slide-1.jpg) repeat;">
             <div class="content">
                <h3>we provide best service</h3>
                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur beatae iusto pariatur laborum magnam eos!</p>
@@ -113,7 +113,7 @@
             </div>
          </section>
 
-         <section class="swiper-slide slide" style="background: url(images/home-slide-2.jpg) no-repeat;">
+         <section class="swiper-slide slide" style="background: url(images/home-slide-2.jpg) repeat;">
             <div class="content">
                <h3>making dream come to life</h3>
                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur beatae iusto pariatur laborum magnam eos!</p>
@@ -121,7 +121,7 @@
             </div>
          </section>
 
-         <section class="swiper-slide slide" style="background: url(images/home-slide-3.jpg) no-repeat;">
+         <section class="swiper-slide slide" style="background: url(images/home-slide-3.jpg) repeat;">
             <div class="content">
                <h3>from concept to creation</h3>
                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur beatae iusto pariatur laborum magnam eos!</p>
